--- a/package.json
+++ b/package.json
@@ -13,12 +13,10 @@
     "@types/node": "20.3.1",
     "@types/react": "18.2.12",
     "@types/react-dom": "18.2.5",
-    "multer": "1.4.5-lts.1",
+    "formidable": "^2.1.1",
     "next": "13.4.5",
-    "next-connect": "^1.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "5.1.3",
-    "uuid": "^9.0.0"
+    "typescript": "5.1.3"
   }
 }
