--- a/package.json
+++ b/package.json
@@ -13,10 +13,15 @@
     "@types/node": "20.3.1",
     "@types/react": "18.2.12",
     "@types/react-dom": "18.2.5",
+    "axios": "^1.4.0",
     "formidable": "^2.1.1",
     "next": "13.4.5",
+    "nodemailer": "^6.9.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "5.1.3"
+  },
+  "devDependencies": {
+    "@types/nodemailer": "^6.4.8"
   }
 }
