--- a/package.json
+++ b/package.json
@@ -10,15 +10,21 @@
   },
   "dependencies": {
     "@types/formidable": "^2.0.6",
+    "@types/multer": "^1.4.7",
     "@types/node": "20.3.1",
     "@types/react": "18.2.12",
     "@types/react-dom": "18.2.5",
+    "@types/streamifier": "^0.1.0",
     "axios": "^1.4.0",
+    "cloudinary": "^1.37.1",
+    "dotenv": "^16.1.4",
     "formidable": "^2.1.1",
+    "multer": "1.4.5-lts.1",
     "next": "13.4.5",
     "nodemailer": "^6.9.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "streamifier": "^0.1.1",
     "typescript": "5.1.3"
   },
   "devDependencies": {
